Starting with protos for leetcoach design CRUDing
